[gd_scene load_steps=12 format=3 uid="uid://b5cc67pt5xwhh"]

[ext_resource type="Script" path="res://HeartShopItem.gd" id="1_0v0vo"]
[ext_resource type="Texture2D" uid="uid://4u1tofhufajt" path="res://assets/sprites/Heart.png" id="2_0jegg"]
[ext_resource type="FontFile" uid="uid://ce33c3yvuo3tf" path="res://assets/fonts/Fonts/m3x6.ttf" id="3_w0nlo"]
[ext_resource type="Texture2D" uid="uid://b84d5632b2fbx" path="res://assets/sprites/MenuButton.png" id="4_0np7y"]
[ext_resource type="Texture2D" uid="uid://bqlqdc566u42v" path="res://assets/sprites/Egg.png" id="4_oqoji"]

[sub_resource type="Animation" id="Animation_jxa66"]
resource_name = "HeartBounce"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3)]
}

[sub_resource type="Animation" id="Animation_vk4yv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbo1k"]
_data = {
"HeartBounce": SubResource("Animation_jxa66"),
"RESET": SubResource("Animation_vk4yv")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jpj0d"]
texture = ExtResource("4_0np7y")
expand_margin_top = 35.0
expand_margin_bottom = 40.0

[sub_resource type="FontVariation" id="FontVariation_d13m5"]
base_font = ExtResource("3_w0nlo")
spacing_top = -4
spacing_bottom = -8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xijiq"]
size = Vector2(14, 16)

[node name="ShopItem" type="Node2D"]
z_index = 1
script = ExtResource("1_0v0vo")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tbo1k")
}
autoplay = "HeartBounce"

[node name="ItemSprite" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_0jegg")

[node name="BuyLabel" type="Label" parent="."]
visible = false
offset_left = -11.0
offset_top = -32.0
offset_right = 14.0
offset_bottom = -19.0
theme_override_fonts/font = ExtResource("3_w0nlo")
text = "BUY: E"

[node name="InfoPanel" type="Panel" parent="."]
visible = false
offset_left = -20.0
offset_top = -51.0
offset_right = 23.0
offset_bottom = -23.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jpj0d")

[node name="InfoLabel" type="Label" parent="InfoPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = 7.0
offset_right = 66.0
offset_bottom = 39.0
scale = Vector2(0.6, 0.6)
theme_override_fonts/font = SubResource("FontVariation_d13m5")
text = "Item Description test test test "
autowrap_mode = 3

[node name="InfoButton" type="Button" parent="."]
visible = false
offset_left = -8.0
offset_top = -29.0
offset_right = 23.0
offset_bottom = -8.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_w0nlo")
action_mode = 0
text = "info >"
flat = true

[node name="InfoButtonClose" type="Button" parent="."]
visible = false
offset_left = -8.0
offset_top = -29.0
offset_right = 23.0
offset_bottom = -8.0
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("3_w0nlo")
action_mode = 0
text = "info ^"
flat = true

[node name="ItemArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemArea"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_xijiq")

[node name="PriceLabel" type="Label" parent="."]
offset_left = -7.0
offset_top = -24.0
offset_right = 30.0
offset_bottom = -11.0
theme_override_fonts/font = ExtResource("3_w0nlo")
text = "50"

[node name="EggSprite" type="Sprite2D" parent="."]
position = Vector2(4, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_oqoji")

[connection signal="pressed" from="InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="InfoButtonClose" to="." method="_on_info_button_close_pressed"]
[connection signal="body_entered" from="ItemArea" to="." method="_on_item_area_body_entered"]
[connection signal="body_exited" from="ItemArea" to="." method="_on_item_area_body_exited"]
